--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ server/config.json
 server/server_linux
 server/server_win386.exe
 server/*.exe
-static/public/evil
+static/public/test_csrf
 
 db/certs/
 
